--- a/index.html
+++ b/index.html
@@ -1190,7 +1190,7 @@
                   <a class="post_category-link" href="/categories/杂项/">杂项</a>
                 </span>
 
-                <!-- Post Views -->
+                <!-- Post Views.. -->
                 <span class="post_entry-views"> </span>
               </div>
             </div>
